Fix slight issues on mobile

--- a/css/elements.scss
+++ b/css/elements.scss
@@ -28,9 +28,9 @@
   width: 100%; 
   height:auto;
   @media only screen and (max-width:$maxwidth) {
-    width:200%;
-    margin-left:-50%;
-    
+    width:160%;
+    margin-left:-30%;
+    overflow:hidden; 
   }
   border: 0;
 }
